--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -2,14 +2,14 @@
 {%- liquid
     if settings.list_iso_rtl != blank
         assign locale_iso_code = request.locale.iso_code
-        assign arr_list_rtl = settings.list_iso_rtl | remove:' ' | split:',' 
+        assign arr_list_rtl = settings.list_iso_rtl | remove:' ' | split:','
         if arr_list_rtl contains locale_iso_code
             assign enable_iso_rtl = true
         else
             assign enable_iso_rtl = false
         endif
     else
-        assign enable_iso_rtl = false 
+        assign enable_iso_rtl = false
     endif
 -%}
 <html class="no-js" lang="{{ request.locale.iso_code }}"{% if settings.enable_layout_rtl and enable_iso_rtl %} dir="rtl"{% endif %}>
@@ -43,7 +43,7 @@
         <script>history.scrollRestoration = "manual"</script>
 
         <script>document.documentElement.className = document.documentElement.className.replace('no-js', 'js');</script>
-        
+
         <!-- Configuração Global do Klaviyo VIP -->
         <script>
           window.KLAVIYO_CONFIG = {
@@ -60,11 +60,11 @@
             elsif settings.layout_body == 'custom_width'
                 assign layout_body = 'body-custom-width'
             endif
-        
+
             if settings.style_dots == '02'
                 assign style_dots = 'style-dots-2'
             endif
-        
+
             if settings.style_arrows == '02'
                 assign style_arrows = 'style-arrows-2'
             elsif settings.style_arrows == '05'
@@ -72,7 +72,7 @@
             elsif settings.style_arrows == '06'
                 assign style_arrows = 'style-arrows-6'
             endif
-        
+
             if settings.product_card_layout == '02'
                 assign product_card_layout = 'product-card-layout-02'
             elsif settings.product_card_layout == '03'
@@ -90,7 +90,7 @@
             else
                 assign product_card_layout = 'product-card-layout-01'
             endif
-        
+
             if settings.quick_shop_type == '1'
                 assign quick_shop_type = 'quick_shop_option_1'
             elsif  settings.quick_shop_type == '2'
@@ -98,7 +98,7 @@
             elsif  settings.quick_shop_type == '3'
                 assign quick_shop_type = 'quick_shop_option_3'
             endif
-        
+
             if settings.style_text_size_varriant == '02'
                 assign style_text_size_varriant = 'size_varriant_style_2'
             endif
@@ -113,7 +113,7 @@
             {% render 'preload-screen' %}
             {% sections 'header-group' %}
             {% render 'wrapper-header' %}
-            
+
             {%- if settings.layout_body == 'boxed' -%}
                 <div class="wrapper-hasbanner-adv">
             {%- endif -%}
@@ -122,23 +122,23 @@
                 <main id="MainContent" class="wrapper-body content-for-layout focus-none" role="main" tabindex="-1">
                     {{ content_for_layout }}
                 </main>
-            {%- if settings.layout_body == 'boxed' -%}        
+            {%- if settings.layout_body == 'boxed' -%}
                 </div>
             {%- endif -%}
-            
+
             <div class="wrapper-footer">{% sections 'footer-group' %}</div>
 
             {% section 'halo-toolbar-mobile' %}
             {% section 'compra-rapida' %}
 
             <ul hidden><li id="a11y-refresh-page-message">{{ 'accessibility.refresh_page' | t }}</li></ul>
-            
+
             {% render 'global-script-2' %}
         </div>
         {% render 'halo-popup' %}
-        
+
         {{ 'custom.js' | asset_url | script_tag }}
-        
+
         <div class="background-overlay">
             {%- if settings.show_effect_close -%}
             <div class="background-cursor-wrapper">
@@ -148,7 +148,7 @@
             </div>
             {%- endif -%}
         </div>
-        
+
         {% if request.page_type == "product" %}
             {{ 'jquery.mask.min.js' | asset_url |  script_tag }}
             <script src="{{ 'quickShipping.js' | asset_url }}" defer="defer"></script>
@@ -171,6 +171,8 @@
         {% endunless %}
 
         {% render 'halo-sidebar' %}
+
+        {% render 'vip-modal-global' %}
 
         {%- if settings.enable_following_cursor -%}
           {% render 'cursor-fixed', style_cursor: settings.following_cursor_style %}
