--- a/snippets/halo-sidebar-menu.liquid
+++ b/snippets/halo-sidebar-menu.liquid
@@ -42,6 +42,10 @@
           {%- if settings.show_wishlist -%}
               <a href="{% if settings.link_wishlist != blank %}{{ settings.link_wishlist }}{% else %}{{ pages['wish-list'].url }}{% endif %}" class="header__icon header__icon--wishlist link link--text focus-inset last-link"><span class="icon-wrapper">{% render 'icon-wishlist' %}</span><span class="title">{{ 'wishlist.general.title' | t }}</span></a>
           {%- endif -%}
+          
+          {%- comment -%} VIP Button Mobile {%- endcomment -%}
+          {% render 'vip-button-mobile' %}
+          
           <div class="wrapper-links"></div>
         </div>
       {%- endif -%}
